<resources>
    <string name="app_name">SysOneScanner</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="status_connecting">Connecting</string>
    <string name="error_fill_all_fields">Please fill in all fields</string>
    <string name="message_sent">Sent</string>
    <string name="mqtt_init_failed">MQTT not initialised</string>
    <string name="mqtt_not_connected">MQTT not connected</string>
    <string name="mqtt_connect_failed">MQTT connect failed: %s</string>
    <string name="mqtt_publish_failed">Publish failed: %s</string>

    <string name="tab_bag_weight">Bag Weight</string>
    <string name="tab_tag_assignment">Tag Assignment</string>

    <string name="hint_tag_id">RFID Tag ID</string>
    <string name="hint_barcode">Barcode</string>
    <string name="hint_rfid">RFID</string>
    <string name="hint_bag_weight">Bag Weight</string>
    <string name="hint_scan_tag">Scan Tag</string>
    <string name="hint_source_doc_number">Source Document Number</string>
    <string name="hint_doc_type">Doc Type</string>

    <string name="submit">Submit</string>
    <string name="btn_lookup">LOOKUP</string>
    <string name="auto_send_tip">Tag will be sent automatically after scan.</string>
    <string name="recent_scans">Recent Scans</string>
    <string name="tx_status_sent">SENT</string>
    <string name="tx_status_fail">FAIL</string>
    <string name="title_assignments">Assignments</string>
    <string name="title_lookup_sap">Lookup SAP Entry</string>
    <string name="status_label">Status</string>
    <string name="message_label">Message</string>

    <string name="title_product_request">Product Request</string>
    <string name="title_offload">Offload</string>
    <string name="btn_fetch_products">Fetch Products</string>
    <string name="btn_submit_request">Submit Product Request</string>

    <string name="station_offline_title">MAIN STATION OFFLINE</string>
    <string name="station_offline_message">Please wait for the main station to reconnect...</string>

    <string name="title_unassign_mode">Unassign Mode</string>
    <string name="msg_unassign_hint">Scan an RFID tag to unassign it from the system.</string>
    <string name="label_last_scanned">Last Scanned</string>
    <string name="status_no_tag">No tag scanned yet</string>
    <string name="btn_open_unassign">Open Unassign Mode</string>
</resources>
